--- a/app/psc/app.toml
+++ b/app/psc/app.toml
@@ -131,7 +131,7 @@ priority = 2
 features = ["mgmt", "h753"]
 requires = {flash = 131072, ram = 8192, sram1 = 16384}
 sections = {eth_bulk = "sram1"}
-uses = ["eth", "eth_dma"]
+uses = ["eth", "eth_dma", "system_flash"]
 start = true
 interrupts = {"eth.irq" = 0b1}
 task-slots = ["sys", "rcc_driver", { spi_driver = "spi2_driver" }]
