--- a/task/net/Cargo.toml
+++ b/task/net/Cargo.toml
@@ -18,6 +18,7 @@ drv-sidecar-seq-api = {path = "../../drv/sidecar-seq-api", optional = true}
 drv-spi-api = {path = "../../drv/spi-api", optional = true}
 drv-stm32h7-eth = {path = "../../drv/stm32h7-eth", features = ["with-smoltcp", "ipv6"]}
 drv-stm32xx-sys-api = {path = "../../drv/stm32xx-sys-api"}
+drv-stm32xx-uid = {path = "../../drv/stm32xx-uid", features = ["family-stm32h7"]}
 drv-user-leds-api = {path = "../../drv/user-leds-api", optional = true}
 hubris-num-tasks = {path = "../../sys/num-tasks", features = ["task-enum"]}
 idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
